funcion clickA result.html

--- a/templates/results.html
+++ b/templates/results.html
@@ -196,6 +196,13 @@
           customSelect.classList.remove("open");
         }
       });
+
+      function clickA(div){
+          const link = div.querySelector('a');
+            if (link) {
+              window.location.href = link.href;
+            }
+      }
     </script>
   </body>
 </html>
